--- a/Gnoquis/Storyboards/Base.lproj/Main.storyboard
+++ b/Gnoquis/Storyboards/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                     <navigationItem key="navigationItem" title="Gnoquis" id="aRK-g3-TX2">
                         <barButtonItem key="leftBarButtonItem" image="Hamburger" id="2vZ-sC-e60">
                             <connections>
-                                <segue destination="THi-h7-l0t" kind="show" identifier="showMenu" action="showDetailViewController:sender:" id="4KI-EY-Jgl"/>
+                                <segue destination="THi-h7-l0t" kind="showDetail" identifier="showMenu" id="4KI-EY-Jgl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -193,10 +193,10 @@
             </objects>
             <point key="canvasLocation" x="1544.8" y="138.98050974512745"/>
         </scene>
-        <!--Menu View Controller-->
+        <!--Gnoquis Filters-->
         <scene sceneID="xze-y7-X8c">
             <objects>
-                <viewController id="THi-h7-l0t" customClass="MenuViewController" customModule="Gnoquis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Gnoquis Filters" id="THi-h7-l0t" customClass="MenuViewController" customModule="Gnoquis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="DVY-Yx-QyE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -242,22 +242,14 @@
                                     <outlet property="delegate" destination="THi-h7-l0t" id="lcA-OG-3zO"/>
                                 </connections>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HFA-Vo-sDd">
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="88J-ku-qOw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                    <color key="textColor" red="0.6432227076" green="0.16438125940000001" blue="0.87434979319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    <color key="textShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </textAttributes>
-                                <textAttributes key="largeTitleTextAttributes">
-                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                </textAttributes>
                                 <items>
-                                    <navigationItem title="Gnoquis Filters" id="5A5-GT-RO8">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="Nm7-FE-loE">
+                                    <navigationItem title="Gnoquis Filters" id="8Zr-1h-Uao">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="o3u-Cb-PCW">
                                             <connections>
-                                                <action selector="cancelButton:" destination="THi-h7-l0t" id="EHF-BO-xkG"/>
+                                                <action selector="cancelButton:" destination="THi-h7-l0t" id="8FO-fl-8Nz"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -269,6 +261,7 @@
                     <value key="contentSizeForViewInPopover" type="size" width="238" height="360"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="mainView" destination="DVY-Yx-QyE" id="EJk-aI-1dY"/>
                         <outlet property="tableView" destination="AfN-Dw-6bv" id="RTE-wT-5d0"/>
                     </connections>
                 </viewController>
@@ -297,12 +290,13 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eik-HG-aeL">
                                 <rect key="frame" x="16" y="231" width="343" height="416"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="0.91502082371725624" blue="0.56435120131284244" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rcosin_01" translatesAutoresizingMaskIntoConstraints="NO" id="kKd-37-SYy">
                                 <rect key="frame" x="67" y="67" width="240" height="156"/>
@@ -314,6 +308,7 @@
                     </view>
                     <connections>
                         <outlet property="imgAbout" destination="kKd-37-SYy" id="tW3-Yi-2hv"/>
+                        <outlet property="mainView" destination="KuS-8e-fWg" id="bYG-68-mgl"/>
                         <outlet property="navigationBar" destination="9PO-l9-iCx" id="iJ1-SP-8OG"/>
                         <outlet property="textAbout" destination="eik-HG-aeL" id="dA3-As-0bZ"/>
                     </connections>
@@ -343,6 +338,6 @@
     </scenes>
     <resources>
         <image name="Hamburger" width="50" height="50"/>
-        <image name="rcosin_01" width="746" height="1054"/>
+        <image name="rcosin_01" width="771" height="938"/>
     </resources>
 </document>
